# fairspace-salford-gripper

./: .gitignore  README.md
build_isolated/: catkin_make_isolated.cache
build_isolated/fcl/devel/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  fcl-targets.cmake  fcl.pc  install_manifest.txt
build_isolated/filters/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/filters/atomic_configure/: .rosinstall  setup.sh
build_isolated/filters/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/filters/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/pid/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/pid/atomic_configure/: local_setup.sh
build_isolated/pid/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  setup_cached.sh  (+1 more)
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/fcl/: setup.bash  setup.sh  setup.zsh
devel_isolated/filters/: .catkin  local_setup.sh
devel_isolated/pid/: .catkin  .rosinstall  setup.sh
docker/: .gitignore
docker/dockerfiles/: farispace-ros-melodic-ubuntu18.04.dockerfile
docker/installers/: init_apt.sh  install_cmake.sh  installer_base.sh  postset_hhkb.sh  preset_hhkb.sh  preset_hhkb_catkin.sh
docker/script/: dev_into.sh  dev_start.sh  run_ros_master.sh
scripts/: salford.bashrc
src.tmp/: .gitignore
src.tmp/common/: package.xml
src/common/: CMakeLists.txt  package.xml
src/common/filters/: CMakeLists.txt  digital_filter.cpp  digital_filter_coefficients.cpp  digital_filter_coefficients.h  mean_filter.cpp  mean_filter.h  mean_filter_test.h  package.xml
src/common/filters/src/: digital_filter_coefficients.cpp
src/common/filters/test/: CMakeLists.txt  digital_filter_coefficients_test.cpp  digital_filter_test.cpp  mean_filter_test.cpp
src/control/: CMakeLists.txt  package.xml
src/wtf/: CMakeLists.txt  package.xml
(+137 files in other folders)
