<?xml version="1.0"?>
<package format="2">
  <name>common</name>
  <version>0.0.1</version>
  <description>The common module</description>
  <maintainer email="x.wang20@salford.ac.uk">Xiaochen Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gtest</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export> </export>
</package>
